spotless applied